--- a/templates/index.html
+++ b/templates/index.html
@@ -16,13 +16,13 @@
 
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="{{ url_for('static', filename='images/photo1.jpg') }}" class="d-block w-100" alt="Photo 1">
+            <img src="{{ url_for('static', filename='photo1.jpg') }}" class="d-block w-100" alt="Photo 1">
         </div>
         <div class="carousel-item">
-            <img src="{{ url_for('static', filename='images/photo2.jpg') }}" class="d-block w-100" alt="Photo 2">
+            <img src="{{ url_for('static', filename='photo2.jpg') }}" class="d-block w-100" alt="Photo 2">
         </div>
         <div class="carousel-item">
-            <img src="{{ url_for('static', filename='images/photo3.jpg') }}" class="d-block w-100" alt="Photo 3">
+            <img src="{{ url_for('static', filename='photo3.jpg') }}" class="d-block w-100" alt="Photo 3">
         </div>
     </div>
 
